
- Parsing of GDB breakpoint information has been improved. (2)

- Parsing of Perl breakpoint information has been improved.

- Perl hash keys containing spaces are supported. (8)


Examining Data
--------------

- New displays can be created left-to-right.  
  See `Edit => Preferences => Data => Placement'.  (6)

- Ladebug array output is better supported.  (7)

- Several memory leaks have been plugged. (1)


User Interface
--------------

- In LessTif, combo boxes (drop-down text boxes) no longer shrink.

- In LessTif, Text selection works better.

- Interrupts (Ctrl+C) from the controlling TTY can be issued multiple times.


Building
--------

- The release includes the `libiberty' and `readline' packages as of GDB 5.0.

- CXXFLAGS settings are respected.

- A bad wildcard use in Makefile has been fixed. (3)

- ddd.texi rules in Makefile have been fixed. (4)


License
-------

- All remaining parts of DDD that used the GNU Library Public General
  License (LGPL) have been changed to use the GNU General Public 
  License (GPL) instead.


Acknowledgments
---------------

Thanks to: 
    (1) Arnaud Desitter <arnaud@nag.co.uk>
    (2) Hiro Sugawara <hiro@lynx.com>
    (3) Yann Dirson <Yann.Dirson@france.sun.com>
    (4) H. Nanosecond <aldomel@ix.netcom.com>
    (5) Gary Cliff <gary.cliff@cdott.com>
    (6) Danny Van Elsen <Danny_Van_Elsen@village.uunet.be>
    (7) Philippe Midol-Monnet <Philippe.MIDOL-MONNET@airbus.aeromatra.com>
    (8) Felipe Rivera <felipe@informador.com.mx>


DDD 3.2.1
=========

DDD 3.2.1 brings some minor bug fixes and major LessTif bug workarounds.

- [LessTif] Helpers (such as uncompressing the DDD manual) work fine.
- [LessTif] The `Print' dialog (esp. printing to file) works fine.
- [LessTif] Restarting DDD (while saving settings) works fine.
- [LessTif] Small fixes for building with LessTif on SGI.
- [Perl] In the data display, Perl hash keys are properly quoted.
- [Ladebug] More Ladebug variants are supported.